/* $Id: ChangeLog,v 1.1703 2001-09-28 07:51:55 phaller Exp $ */

 2001-09-28: Sander van Leeuwen <sandervl@xs4all.nl>
    - PE2LX:    o Added options to remove fixups and to reroute all
                  imports to a custom odin dll

 2001-09-27: Patrick Haller <patrick.haller@innotek.de>
    - USER32:   o partial implementation of SendInput()
    - KERNEL32: o improved error code mapping (error2WinError)
                o keep HandleManager from reusing last handle
                  too quickly (CreateFile after CloseHandle might
                  return the same handle again, which is correct but doesn't
                  put the spotlight on buggy apps)

 2001-09-26: Sander van Leeuwen <sandervl@xs4all.nl>
    - WININET/ICMP/WS2_32/WINSPOOL/CTL3D32:
                o Makefiles added to build library with obj files
    - WININET:  o Split up initterm
    - CUSTOMBUILD: 
                o Ordinals definitions moved into ordinals.h

 2001-09-26: knut st. osmundsen <kosmunds@csc.com>
    - Win32k:   o Create development branch 'splittup' which in the
                  splittup of win32k is being implemented.
                o BTW. I think I've found the jfs/fat32 + win32k problem.
                  I left some dirty readonly heap pages behind...
                  That is corrected in the splittup.
    - Some Makefiles:
                o Corrected the file header to state correct dllname.
                  Ye][ow, which is doing some documentation stuff on the Odin32,
                  pointed this out this for me.

 2001-09-26: Patrick Haller <patrick.haller@innotek.de>
    - ODINWRAP: o fixed FNEPILOGUE position
      (MISC)    o added support for calldepth tracing
    - OLE32:    o fixed wrong prototype in regsvr32.cpp

 2001-09-25: Sander van Leeuwen <sandervl@xs4all.nl>
    - COMCTL32: o Wine updates (MRU functions)
    - SHELL32:  o Wine updates (SHAddToRecentDocs)
    - DDRAW/ADVAPI32: Added makefiles for building library with obj files
