@@ -1,4 +1,7 @@
-/* $Id: ChangeLog,v 1.1703 2001-09-28 07:51:55 phaller Exp $ */
+/* $Id: ChangeLog,v 1.1704 2001-09-28 14:08:02 phaller Exp $ */
+
+ 2001-09-28: Patrick Haller <patrick.haller@innotek.de>
+    - USER32:   o added experimental support for WH_KEYBOARD_LL hook
 
  2001-09-28: Sander van Leeuwen <sandervl@xs4all.nl>
     - PE2LX:    o Added options to remove fixups and to reroute all
